Rename Authority to Role (security on) Add WebSecurityConfig

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,13 @@
 nav {
-    padding: 5px;
+    display: block;
+}
+
+nav ul {
+    display: block;
+}
+
+nav li {
+    display: inline-block;
 }
 
 a {
