--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -1,3 +1,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-| <a href="/">Home</a> | <a href="/user">Create</a> | <a href="/user/all">Users</a> |
+<ul>
+    <li><a th:href="@{/}">Home</a> |</li>
+    <li><a th:href="@{/user/all}">Users</a> |</li>
+    <li th:if="${#request.remoteUser == null}"><a th:href="@{/user}">Register</a> |</li>
+    <li th:if="${#request.remoteUser == null}"><a th:href="@{/login}">Login</a></li>
+    <li th:if="${#request.remoteUser != null}"><a th:href="${'/user/name/' + #request.remoteUser}"
+                                                  th:if="${#request.remoteUser}"
+                                                  th:text="${#strings.capitalize(#request.remoteUser)}"></a> |
+    </li>
+    <li th:if="${#request.remoteUser != null}"><a th:href="@{/logout}">Logout</a></li>
+</ul>
 </html>
