--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ThymeleafVariablesResolveInspection -->
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Home page</title>
@@ -20,24 +21,24 @@
         <th th:utext="${#strings.capitalize('__#{user.account_non_expired}__')}">Non Expired</th>
         <th th:utext="${#strings.capitalize('__#{user.credential_non_expired}__')}">Non Expired</th>
         <th th:utext="${#strings.capitalize('__#{user.account_non_locked}__')}">Non Locked</th>
-        <th th:utext="${#strings.capitalize('__#{user.authorities}__')}">Authorities</th>
+        <th th:utext="${#strings.capitalize('__#{user.roles}__')}">Roles</th>
         <th th:utext="${#strings.capitalize('__#{user.first_name}__')}">First Name</th>
         <th th:utext="${#strings.capitalize('__#{user.last_name}__')}">Last Name</th>
         <th th:utext="${#strings.capitalize('__#{user.email}__')}">Email</th>
     </tr>
-    <th:block th:each="user : ${users}">
+    <th:block th:each="user : ${users}" th:object="${user}">
         <tr>
-            <td><a th:href="${'/user/'+user.id}" th:text="${user.id}"></a></td>
-            <td><a th:href="${'/user/name/'+user.username}" th:text="${user.username}"></a></td>
-            <td th:text="${user.password}"></td>
-            <td th:text="${user.enabled}"></td>
-            <td th:text="${user.accountNonExpired}"></td>
-            <td th:text="${user.credentialsNonExpired}"></td>
-            <td th:text="${user.accountNonLocked}"></td>
-            <td th:text="${#strings.listJoin(user.authorities, ', ')}"></td>
-            <td th:text="${user.firstName}"></td>
-            <td th:text="${user.lastName}"></td>
-            <td th:text="${user.email}"></td>
+            <td><a th:href="*{'/user/'+id}" th:text="*{id}"></a></td>
+            <td><a th:href="*{'/user/name/'+username}" th:text="*{username}"></a></td>
+            <td th:text="*{password}"></td>
+            <td th:text="*{enabled}"></td>
+            <td th:text="*{accountNonExpired}"></td>
+            <td th:text="*{credentialsNonExpired}"></td>
+            <td th:text="*{accountNonLocked}"></td>
+            <td th:text="*{#strings.listJoin(roles, ', ')}"></td>
+            <td th:text="*{firstName}"></td>
+            <td th:text="*{lastName}"></td>
+            <td th:text="*{email}"></td>
         </tr>
     </th:block>
     </thead>
