--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/common::head(~{::title},~{})">
+<head th:replace="layout::head(~{::title},~{})">
     <title>Sign-in page</title>
 </head>
 <body>
-<div th:replace="fragments/header::header"></div>
-<div th:replace="fragments/alerts::alerts"></div>
-<main class="container-fluid">
-    <!--    <h3>Sign-in:</h3>-->
-    <div class="container">
-        <div class="row justify-content-md-center text-center">
-            <form class="form-signin col-3" th:action="@{/sign-in}" th:method="post">
-                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                <label class="sr-only" for="username">Username</label>
-                <input autofocus class="form-control" id="username" placeholder="Username" required type="text">
-                <label class="sr-only" for="password">Password</label>
-                <input class="form-control" id="password" placeholder="Password" required type="password">
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
-            </form>
-        </div>
+<div th:replace="layout::header"></div>
+<div th:replace="layout::alerts"></div>
+<main class="container">
+    <div class="row justify-content-center">
+        <form class="form-signin text-center" th:action="@{/auth/sign-in}" th:method="post">
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <label class="sr-only" for="username">Username</label>
+            <input autofocus class="form-control" id="username" name="username" placeholder="Username" required
+                   type="text">
+            <label class="sr-only" for="password">Password</label>
+            <input class="form-control" id="password" name="password" placeholder="Password" required type="password">
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
     </div>
 </main>
 </body>
